@@ -1,3 +1,11 @@
+2000-04-23  Per Bothner  <per@bothner.com>
+
+	* Marker.java (Marker(Marker)):  Fix it.
+	* emacs.scm (force-mode-line-update):  Define as explicit function,
+	so elisp can find it in the function name space.
+	(point-at-bol):  Fix off-by-one error.
+	(save-excursion):  Remove  (now handled by elisp SaveExcursion class).
+
 2000-04-17  Per Bothner  <per@bothner.com>
 
 	* BufferContent.java:  No extends gnu.kawa.util.CharBuffer.
